# multi-view-AE

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE.md  README.md  environment.yml  exampleMNIST.ipynb  example_MNIST.py  model_frameworks.md  parameter_configurations.md  pyproject.toml  requirements.txt  setup.py  user_guide.md
.github/workflows/: ci.yml  draft-pdf.yml  publish.yml
benchmarking/PolyMNIST_experiments/: MMNISTdataloader.py  benchmarking_results.py  run_benchmarking.py
benchmarking/bMNIST_experiments/: bMNISTdataloader.py  benchmarking_results.py  run_benchmarking.py
docs/: requirements.txt
docs/JOSS/: paper.bib  paper.md
docs/source/: conf.py  index.rst
docs/user_guides/: user_guide.md
examples/: exampleMNIST.ipynb  exampleMNIST.py  exampleMNIST_DVCCA.ipynb  exampleMNISTlabels.py
examples/config/: MNIST_image_text.yaml  example_mnist.yaml
multi-view-ae/architectures/: __init__.py  mlp.py
multi-view-ae/base/: base_model.py  distributions.py  validation.py
multi-view-ae/configs/: default.yaml
multi-view-ae/models/: aae.py  waae.py
multiae/: __init__.py
multiae/architectures/: __init__.py  cnn.py  mlp.py
multiae/base/: __init__.py  base_model.py  base_trainer.py  constants.py  dataloaders.py  datasets.py  distributions.py  exceptions.py  representations.py  validation.py
multiae/config_files/: config.yaml
multiae/configs/: default.yaml  run.yaml
multiae/models/: __init__.py  aae.py  ae.py  cvae.py  dvcca.py  jmvae.py  joint_aae.py  joint_vae.py  joint_waae.py  layers.py  mcvae.py  me_mvae.py  mmJSD.py  mmvae.py  mopoevae.py  multi_mVAE.py  multi_mvae.py  multi_vae.py  mvae.py  mvtcae.py  utils_deep.py  vae.py  vae_classifier.py  waae.py
multiae/plot/: __init__.py  plotting.py
multiae/utils/: __init__.py  calc_utils.py  dataloaders.py  datasets.py  distributions.py  io_utils.py  kl_utils.py  trainer.py  utils.py
multiview_models/: requirements.txt
multiviewae/architectures/: __init__.py  cnn.py  mlp.py
multiviewae/base/: __init__.py  base_model.py  constants.py  dataloaders.py  datasets.py  distributions.py  representations.py  validation.py
multiviewae/configs/: default.yaml
multiviewae/models/: DMVAE.py  (+22 more)
src/: __init__.py  example_MNIST.py
tests/: test_config.yaml  test_models.py  test_multiae.py  test_utilsdeep.py  testing.py
(+161 files in other folders)
