[tool.poetry]
name = "multiae"
version = "0.0.2"
description = "A library for running multiview autoencoder models"
authors = ["analawryaguila <ana.lawryaguila@outlook.com>"]
readme = "README.md"
packages = [{include = "multiae"}]

license = "MIT"
documentation = "https://multiae.readthedocs.io/en/latest/"

[tool.setuptools.package-data]
"" = ["*.yaml"]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^5.4.1"
torch= "^1.10.1"
torchvision = "*"
pytorch-lightning = "1.5.10"
scipy = "*"
pandas = "*"
hydra-core = "*"
schema = "*"
numpy = "*"
matplotlib = "*"
ordereddict = "*"

[build-system]
requires = ["poetry-core", "setuptools ~= 58.0"]
build-backend = "poetry.core.masonry.api"